# biosynth

./: .gitignore  bvs  jupyter.sh  test.sh
.github/workflows/: ci.yml  coverage.yml  release.yml
cli/: Cargo.toml
cli/src/: download.rs  genotype.rs  main.rs  stats.rs  util.rs
cli/src/commands/: allele_report.rs  genostats.rs  reference_load.rs  synthetic.rs
notebooks/: 01_downloads.ipynb  02_data.ipynb
scripts/: diff_genotypes.py  extract_reference_variants.py  generate_synthetic_genotype.py
