[package]
name = "biosynth"
version = "0.1.1"
edition = "2021"
rust-version = "1.91"
authors = ["Madhava Jay <madhava@openmined.org>"]
license = "Apache-2.0"
description = "Biosynth CLI: synthetic data generator for BioVault"
readme = "../README.md"
repository = "https://github.com/openmined/biosynth"
keywords = ["cli", "bioinformatics", "data", "synthetic"]
categories = ["command-line-utilities", "science"]
publish = false

[[bin]]
name = "bvs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.4"
csv = "1.3"
rand = { version = "0.8", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
